# Toy-Projects

./: barcode_scanner.py
inventory_tracking/: .env  Cargo.toml  README.md  README.txt
inventory_tracking/src/: main.rs  models.rs
