[package]
name = "inventory_tracking"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
axum = "0.6"
dotenv = "0.15"
sqlx = {version= "0.8.6", features = ["postgres", "runtime-tokio", "chrono"]}
chrono = "0.4"
image = "0.25.9"
rxing = "0.8.2"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
